--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -3,8 +3,7 @@ name: Build and push the latest build to staging
 on:
   push:
     branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+
 jobs:
   build_push_image:
     runs-on: ubuntu-20.04
@@ -28,3 +27,37 @@ jobs:
           context: .
           tags: ${{secrets.ACR_NAME}}/contoso-website:latest
           push: true
+
+  deploy:
+    runs-on: ubuntu-20.04
+    needs: build_push_image # Will wait for the execution of the previous job
+    
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Helm
+        uses: Azure/setup-helm@v1
+        with:
+          version: v3.3.1
+          
+      - name: Get AKS Credentials
+        uses: Azure/aks-set-context@v1
+        with:
+          # Azure credentials, i.e., output of `az ad sp create-for-rbac --scopes /subscriptions/<SUBSCRIPTION-ID> --role Contributor --sdk-auth`
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          # Resource group name
+          resource-group: mslearn-gh-pipelines-27264
+          # AKS cluster name
+          cluster-name: contoso-video
+          
+      - name: Run Helm Deploy
+        run: |
+          helm upgrade \
+            --install \
+            --create-namespace \
+            --atomic \
+            --wait \
+            --namespace staging \
+            contoso-website \
+            ./kubernetes/contoso-website \
+            --set image.repository=${{ secrets.ACR_NAME }} \
+            --set dns.name=${{ secrets.DNS_NAME }}
