--- a/kubernetes/contoso-website/values.yaml
+++ b/kubernetes/contoso-website/values.yaml
@@ -1,5 +1,5 @@
 image:
-  registry: contosocontainerregistry14853
+  registry: contosocontainerregistry14853.azurecr.io
   name: contoso-website
   tag: latest
 
